[package]
name = "gfa-path"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfa-reader = {git = "https://github.com/MoinSebi/gfa-reader"}
clap = "=3.0.0-beta.4"
log = "0.4.0"
env_logger = "0.8.4"
chrono = "0.4"
hashbrown = "0.12.3"


[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"